[package]
authors = ["Elliott Linder <elliott.darfink@gmail.com>"]
description = "Generic extensions for tapping values in Rust"
documentation = "https://docs.rs/tap"
homepage = "https://github.com/darfink/tap-rs"
keywords = ["tap", "functional", "tap_ok", "tap_some"]
license = "MIT"
name = "tap"
readme = "README.md"
repository = "https://github.com/darfink/tap-rs"
version = "0.2.1"

[dependencies.futures]
optional = true
version = "0.1.14"

[dev-dependencies]
matches = "0.1.6"

[features]
default = []
future = ["futures"]
