[package]
authors = [
  "Elliott Linder <elliott.darfink@gmail.com>",
  "Alexander Payne <appayne@outlook.com>",
]
description = "Generic extensions for tapping values in Rust"
documentation = "https://docs.rs/tap"
homepage = "https://github.com/darfink/tap-rs"
keywords = ["tap", "functional", "tap_ok", "tap_some"]
license = "MIT"
name = "tap"
readme = "README.md"
repository = "https://github.com/darfink/tap-rs"
version = "0.4.0"

[package.metadata.docs.rs]
features = ["future, nom3"]

[dependencies.futures]
optional = true
version = "0.1.14"

[dependencies.nom]
optional = true
version = "3"

[features]
default = []
future = ["futures"]
nom3 = ["nom"]
